--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,6 +1,6 @@
-<fragment android:name="pop.uz.newsapp.settings.SettingsActivity$SettingsFragment"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:name="pop.uz.newsapp.settings.SettingsActivity$SettingsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".settings.SettingsActivity"/>
+    tools:context=".settings.SettingsActivity" />
