--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,8 +1,5 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/title_activity_settings">
-
-
 
     <ListPreference
         android:defaultValue="@string/settings_order_by_default"
@@ -24,7 +21,5 @@
         android:entryValues="@array/settings_category_values"
         android:key="@string/settings_category_key"
         android:title="@string/settings_category_label" />
-
-
 
 </PreferenceScreen>
